fix bottom padding on mobile

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -176,6 +176,7 @@ a {
     
     .content-container {
         padding: 1.5rem;
+        padding-bottom: 2rem;
         align-items: center;
     }
 
